# Echo

./: .env.example  .gitignore  CLAUDE.md  Echo_Protocol_Complete_Script.md  Echo_Protocol_剧本大纲.md  PROGRESS.md  README.md  start.sh
content/echo_protocol/: beats.yaml
content/echo_protocol/artifacts/: anomaly_log_alpha.md  anomaly_log_beta.md  echo_protocol_spec.md  incident_report.md  keira_fragment_01.md  mission_brief.md  prometheus_note.md  surveillance_clause.md  technical_overview.md
docs/: ARCHITECTURE.md  FEAR_SYSTEM.md  FRONTEND_DESIGN.md  PROMPTS_PHASE_1_2.md  PROMPTS_PHASE_3_6.md  TASKS_PHASE_1_2.md  TASKS_PHASE_3_4.md  TASKS_PHASE_5_6.md
fear-engine/: Cargo.toml
fear-engine/crates/ai-integration/: Cargo.toml
fear-engine/crates/ai-integration/src/: cache.rs  claude_client.rs  image.rs  lib.rs  narrative.rs
fear-engine/crates/ai-integration/src/prompt/: context.rs  mod.rs  output.rs  system.rs
fear-engine/crates/ai-integration/src/prompt/snapshots/: fear_engine_ai_integration__prompt__tests__prompt_calibrating.snap  fear_engine_ai_integration__prompt__tests__prompt_climax.snap  fear_engine_ai_integration__prompt__tests__prompt_escalating.snap  fear_engine_ai_integration__prompt__tests__prompt_exploring.snap
fear-engine/crates/common/: Cargo.toml
fear-engine/crates/common/src/: config.rs  error.rs  lib.rs  types.rs
fear-engine/crates/core/: Cargo.toml
fear-engine/crates/core/src/: event_bus.rs  lib.rs  scene.rs  scene_manager.rs  state_machine.rs
fear-engine/crates/core/src/narrative/: hospital.rs  mod.rs  templates.rs
fear-engine/crates/fear-profile/: Cargo.toml
fear-engine/crates/fear-profile/proptest-regressions/: behavior.txt
fear-engine/crates/fear-profile/src/: adaptation.rs  analyzer.rs  behavior.rs  lib.rs  profile.rs  scorer.rs
fear-engine/crates/fear-profile/src/snapshots/: fear_engine_fear_profile__adaptation__tests__calibrating_directive.snap  fear_engine_fear_profile__adaptation__tests__escalating_directive.snap  fear_engine_fear_profile__scorer__tests__anxious_avoider.snap  fear_engine_fear_profile__scorer__tests__curious_explorer.snap  fear_engine_fear_profile__scorer__tests__high_claustrophobia.snap
fear-engine/crates/server/: Cargo.toml
fear-engine/crates/server/src/: app.rs  comprehensive_test.rs  director.rs  e2e_test.rs  game_loop.rs  main.rs  perf_tests.rs  session_script.rs
fear-engine/crates/server/src/echo_protocol/: content.rs  mod.rs  prompt.rs  runtime.rs
fear-engine/crates/server/src/middleware/: cors.rs  mod.rs
fear-engine/crates/server/src/routes/: game.rs  health.rs  mod.rs
fear-engine/crates/server/src/ws/: handler.rs  messages.rs  mod.rs  session.rs
fear-engine/crates/storage/: Cargo.toml
fear-engine/crates/storage/src/: behavior_log.rs  cache.rs  fear_profile.rs  lib.rs  scene_history.rs  session.rs
fear-engine/crates/storage/src/migrations/: 001_initial.sql
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: game-flow.spec.ts
frontend/scripts/: start-e2e-backend.sh  start-e2e-frontend.sh
frontend/src/: App.test.tsx  App.tsx  main.tsx  perf.test.ts
frontend/src/components/: AuditTerminal.test.tsx  AuditTerminal.tsx  BadEnding.tsx  CameraCapture.tsx  ChoicePanel.test.tsx  ChoicePanel.tsx  DebugOverlay.test.tsx  DebugOverlay.tsx  EndingScreen.test.tsx  EndingScreen.tsx  FearMeter.tsx  FearReveal.test.tsx  FearReveal.tsx  GameScreen.test.tsx  GameScreen.tsx  HorrorImage.test.tsx  HorrorImage.tsx  LoadingScreen.test.tsx  LoadingScreen.tsx  SessionChrome.test.tsx  SessionChrome.tsx  StartScreen.test.tsx  StartScreen.tsx
frontend/src/components/effects/: AmbientDarkness.tsx  CRTOverlay.tsx  Vignette.tsx  (+3 more)
frontend/src/hooks/: useAudio.test.ts  useAudio.ts  useBehaviorTracker.test.ts  useBehaviorTracker.ts  useWebSocket.test.ts  useWebSocket.ts
frontend/src/stores/: gameStore.test.ts  gameStore.ts
frontend/src/styles/: effects.css  globals.css
frontend/src/systems/: AudioEngine.test.ts  AudioEngine.ts  BehaviorCollector.test.ts  BehaviorCollector.ts
frontend/src/types/: behavior.ts  game.ts  narrative.ts  ws.ts
