[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/storage",
    "crates/core",
    "crates/fear-profile",
    "crates/ai-integration",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fear Engine Team"]
license = "MIT"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }

# Internal crates
fear-engine-common = { path = "crates/common" }
fear-engine-storage = { path = "crates/storage" }
fear-engine-core = { path = "crates/core" }
fear-engine-fear-profile = { path = "crates/fear-profile" }
fear-engine-ai-integration = { path = "crates/ai-integration" }
