[package]
name = "fear-engine-ai-integration"
version.workspace = true
edition.workspace = true

[dependencies]
fear-engine-common = { workspace = true, features = ["reqwest"] }
fear-engine-fear-profile = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
insta = { version = "1", features = ["yaml"] }
