[package]
name = "fear-engine-core"
version.workspace = true
edition.workspace = true

[dependencies]
fear-engine-common = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
