[package]
name = "fear-engine-fear-profile"
version.workspace = true
edition.workspace = true

[dependencies]
fear-engine-common = { workspace = true }
fear-engine-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["yaml"] }
