[package]
name = "fear-engine-storage"
version.workspace = true
edition.workspace = true

[dependencies]
fear-engine-common = { workspace = true, features = ["rusqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
